updates package and app
